fixed overflow table row

--- a/Task6 (JQuery Table with Fetch API)/src/styles/index.scss
+++ b/Task6 (JQuery Table with Fetch API)/src/styles/index.scss
@@ -1,5 +1,10 @@
 @import "bootstrap";
 
+td {
+  overflow-x: auto;
+  max-width: 200px;
+}
+
 input[type="button"] {
   margin-left: 10px;
 }
